--- a/.github/workflows/CI_Build.yml
+++ b/.github/workflows/CI_Build.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ "ubuntu-latest", "windows-latest", "macos-latest" ]
+        os: [ "windows-latest", "ubuntu-latest", "macos-latest" ]
     steps:
     - uses: actions/checkout@v2
     - name: make bin on ${{ matrix.os }}
