--- a/.github/workflows/CI_Build.yml
+++ b/.github/workflows/CI_Build.yml
@@ -13,10 +13,10 @@ jobs:
       matrix:
         os: [ "windows-latest" ]
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: make bin on ${{ matrix.os }}
       run: |
-        msvc --version
+        c++ --version
         # choco install mingw --version=12.2.0
         mkdir build 
         cd build
