--- a/.github/workflows/CI_Build.yml
+++ b/.github/workflows/CI_Build.yml
@@ -17,13 +17,15 @@ jobs:
     - uses: ilammy/msvc-dev-cmd@v1
     - name: make bin on ${{ matrix.os }}
       run: |
-        msvc --version
+        # msvc --version
         c++ --version
         # choco install mingw --version=12.2.0
         mkdir build 
         cd build
-        cmake .. -DCMAKE_BUILD_TYPE=Release -G "Unix Makefiles"
-        make bin
+        # cmake .. -DCMAKE_BUILD_TYPE=Release -G "Unix Makefiles"
+        cmake .. -DCMAKE_BUILD_TYPE=Release -G "NMake Makefiles" .
+        nmake bin
+        # make bin
     - name: test bin on ${{ matrix.os }}
       run: |
         cd build
