--- a/.github/workflows/CI_Build.yml
+++ b/.github/workflows/CI_Build.yml
@@ -29,6 +29,7 @@ jobs:
           cmake .. -DCMAKE_BUILD_TYPE=Release -G "Unix Makefiles"
           make bin
         fi
+      shell: bash
     - name: test bin on ${{ matrix.os }}
       run: |
         cd build
