--- a/.github/workflows/CI_Build.yml
+++ b/.github/workflows/CI_Build.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ "windows-latest" ]
+        os: [ "windows-latest" , "ubuntu-latest" ]
     steps:
     - uses: actions/checkout@v3
     - uses: ilammy/msvc-dev-cmd@v1
@@ -23,7 +23,7 @@ jobs:
         mkdir build 
         cd build
         if [ "$RUNNER_OS" == "Windows" ]; then
-          cmake .. -DCMAKE_BUILD_TYPE=Release -G "NMake Makefiles" .
+          cmake .. -DCMAKE_BUILD_TYPE=Release -G "NMake Makefiles"
           nmake bin
         else
           cmake .. -DCMAKE_BUILD_TYPE=Release -G "Unix Makefiles"
